--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.9.0",
-    "next": "14.2.13",
+    "next": "^14.2.13",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18"
