--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "framer-motion": "^11.9.0",
     "next": "^14.2.13",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18"
